<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ShareResult">

    <Button
        android:id="@+id/save_square_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:enabled="false"
        android:onClick="onClick"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/editNameStoryLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#67878787"
        android:elevation="20dp"
        android:gravity="center_vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/closeEditName"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:foreground="@android:drawable/btn_dialog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@android:drawable/progress_horizontal"
            android:ems="10"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayoutSquare"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#202020"
        android:orientation="vertical"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:background="#202020">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_above="@+id/divider2"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="#1C1C1C"
                android:elevation="10dp"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.1"
                    android:fontFamily="@font/caveat"
                    android:gravity="center"
                    android:text="@string/mbti_personality"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="50sp"
                    app:autoSizeMinTextSize="20sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/textViewNameShare"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".9"
                    android:background="#202020"
                    android:fontFamily="@font/damion"
                    android:gravity="center"
                    android:paddingBottom="6dp"
                    android:text="@string/tap_to_change_name"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="50sp"
                    app:autoSizeMinTextSize="20sp"
                    app:autoSizeTextType="uniform" />

            </LinearLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="-80dp"
                android:background="#00FFFFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_below="@+id/divider2"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="0dp"
                android:background="@drawable/round_corner2"
                android:orientation="vertical"
                android:weightSum="4">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".5"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/mbti_type"
                        android:textColor="#BFBFBF"
                        app:autoSizeMaxTextSize="30sp"
                        app:autoSizeMinTextSize="12sp"
                        app:autoSizeTextType="uniform" />

                    <TextView
                        android:id="@+id/textViewMbtiTypeSquare"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="10dp"
                        android:gravity="center_vertical|end"
                        android:textColor="#FFFFFF"
                        app:autoSizeMaxTextSize="30sp"
                        app:autoSizeMinTextSize="12sp"
                        app:autoSizeTextType="uniform" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".4"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/personality_name"
                        android:textColor="#BFBFBF"
                        app:autoSizeMaxTextSize="30sp"
                        app:autoSizeMinTextSize="12sp"
                        app:autoSizeTextType="uniform" />

                    <TextView
                        android:id="@+id/textViewPersonalityNameSquare"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="10dp"
                        android:gravity="center_vertical|end"
                        android:textColor="#FFFFFF"
                        app:autoSizeMaxTextSize="30sp"
                        app:autoSizeMinTextSize="12sp"
                        app:autoSizeTextType="uniform" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/textViewDescSquareResult"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="3.1"
                    android:gravity="center"
                    android:textColor="#B9E1FF"
                    app:autoSizeMaxTextSize="20sp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeTextType="uniform" />

            </LinearLayout>
        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".8"
            android:background="@color/colorPrimary">

            <View
                android:id="@+id/divider3"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:orientation="vertical"
                android:weightSum="5"
                app:layout_constraintBottom_toTopOf="@+id/textView7"
                app:layout_constraintEnd_toStartOf="@+id/divider3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/i_e"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:textColor="#FFBFBFBF"
                    app:autoSizeMaxTextSize="25sp"
                    app:autoSizeMinTextSize="14sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/n_s"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:textColor="#FFBFBFBF"
                    app:autoSizeMaxTextSize="25sp"
                    app:autoSizeMinTextSize="14sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/f_t"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:textColor="#FFBFBFBF"
                    app:autoSizeMaxTextSize="25sp"
                    app:autoSizeMinTextSize="14sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/j_p"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:textColor="#FFBFBFBF"
                    app:autoSizeMaxTextSize="25sp"
                    app:autoSizeMinTextSize="14sp"
                    app:autoSizeTextType="uniform" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:weightSum="5"
                app:layout_constraintBottom_toTopOf="@+id/textView7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/divider3"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/i_eP"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end"
                    android:textColor="#FFFFFF"
                    app:autoSizeMaxTextSize="25sp"
                    app:autoSizeMinTextSize="14sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/n_sP"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end"
                    android:textColor="#FFFFFF"
                    app:autoSizeMaxTextSize="25sp"
                    app:autoSizeMinTextSize="14sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/f_tP"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end"
                    android:textColor="#FFFFFF"
                    app:autoSizeMaxTextSize="25sp"
                    app:autoSizeMinTextSize="14sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/j_pP"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end"
                    android:textColor="#FFFFFF"
                    app:autoSizeMaxTextSize="25sp"
                    app:autoSizeMinTextSize="14sp"
                    app:autoSizeTextType="uniform" />

            </LinearLayout>


            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#1C1C1C"
                android:gravity="end"
                android:paddingBottom="50dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>